tambahkan link github

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </a>
 
               <!-- Github -->
-              <a href="#" target="_blank" class="social w-[2.70rem] h-[2.70rem] mr-3 rounded-lg flex justify-center items-center bayangan bg-slate-800 text-white hover:bg-white hover:text-slate-800 transition-all duration-200">
+              <a href="https://github.com/imferdian" target="_blank" class="social w-[2.70rem] h-[2.70rem] mr-3 rounded-lg flex justify-center items-center bayangan bg-slate-800 text-white hover:bg-white hover:text-slate-800 transition-all duration-200">
                 <svg role="img" width="23" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                   <title>GitHub</title>
                   <path
@@ -389,13 +389,13 @@
 
         <div class="w-full px-4">
           <div class="flex flex-wrap items-center justify-center">
-            <a href="google.com" class="max-w-[150px] mx-1 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100">
+            <a href="google.com" class="max-w-[150px] grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100">
               <img src="img/clients/google.svg" alt="Google" />
             </a>
-            <a href="grab.com" class="max-w-[115px] mx-6 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100">
+            <a href="grab.com" class="max-w-[115px] mx-6 sm:mx-6 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100">
               <img src="img/clients/Grab.svg" alt="Grab" />
             </a>
-            <a href="shopee.co.id" class="max-w-[120px] mx-6 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100">
+            <a href="shopee.co.id" class="max-w-[120px] mt-6 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100">
               <img src="img/clients/shopee.svg" alt="Shopee" />
             </a>
             <a href="tokopedia.com" class="max-w-[150px] mx-6 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100">
@@ -650,7 +650,7 @@
     </svg>
 
     <!-- Footer Start -->
-    <footer class="bg-[#112022] pt-24 pb-12">
+    <footer class="bg-[#112022] pt-10 pb-12">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-12 text-secondary font-medium md:w-1/3">
